--- a/index.html
+++ b/index.html
@@ -147,13 +147,22 @@
 
         // ===== 在这里添加你们的照片（可以是URL或base64） =====
         const PRESET_PHOTOS = [
-            // 示例1：使用图片URL
-            // 'https://example.com/photo1.jpg',
-            
-            // 示例2：使用base64编码（推荐，这样照片会内嵌在HTML中）
-            // 'data:image/jpeg;base64,/9j/4AAQSkZJRg...'
-            
-            // 如果留空，会显示默认的"JOYEUX NOEL"卡片
+            '1.jpg',
+            '2.jpg',
+            '3.jpg',
+            '4.jpg',
+            '5.jpg',
+            '6.jpg',
+            '7.jpg',
+            '8.jpg',
+            '9.jpg',
+            '10.jpg',
+            '11.jpg',
+            '12.jpg',
+            '13.jpg',
+            '14.jpg',
+            '15.jpg',
+            '16.jpg'
         ];
         // =====================================================
 
@@ -675,3 +684,4 @@
     </script>
 </body>
 </html>
+
